Supress more warnings